@@ -6,37 +6,67 @@ import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
 import javafx.scene.control.cell.PropertyValueFactory;
 import model.database.Database;
-
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
 
+/**
+ * The controller for the script page.
+ *
+ * @author Kaleb Anagnostou
+ * @version 2025 August
+ */
 public class ScriptsPageController {
-    @FXML public TextField saveName;
-    @FXML public TextField kineticFrame;
-    @FXML public TextField kineticType;
-    @FXML public TextField energyFrame;
-    @FXML public TextField energyType;
-    @FXML public TextField powerFrame;
-    @FXML public TextField powerType;
-    @FXML public TextField avgDPS;
-    @FXML public TextField totalDamage;
-    @FXML public TextField saveDate;
+    /** Script save name to search for in the database. */
+    @FXML private TextField saveName;
+    /** Kinetic weapon frame to search for in the database. */
+    @FXML private TextField kineticFrame;
+    /** Kinetic weapon type to search for in the database. */
+    @FXML private TextField kineticType;
+    /** Energy weapon frame to search for in the database. */
+    @FXML private TextField energyFrame;
+    /** Energy weapon type to search for in the database. */
+    @FXML private TextField energyType;
+    /** Power weapon frame to search for in the database. */
+    @FXML private TextField powerFrame;
+    /** Power weapon type to search for in the database. */
+    @FXML private TextField powerType;
+    /** Average DPS to search for in the database. */
+    @FXML private TextField avgDPS;
+    /** Cumulative damage to search for in the database. */
+    @FXML private TextField totalDamage;
+    /** The table displaying the query results. */
+    @FXML private TableView<ScriptRow> scriptsTable;
+    /** Column that will display the sim's script id. */
+    @FXML private TableColumn<ScriptRow, Integer> colScriptID;
+    /** Column that will display the sim's saved name. */
+    @FXML private TableColumn<ScriptRow, String> colSaveName;
+    /** Column that will display the sim's kinetic frame. */
+    @FXML private TableColumn<ScriptRow, String> colKineticFrame;
+    /** Column that will display the sim's kinetic type. */
+    @FXML private TableColumn<ScriptRow, String> colKineticType;
+    /** Column that will display the sim's energy frame. */
+    @FXML private TableColumn<ScriptRow, String> colEnergyFrame;
+    /** Column that will display the sim's energy type. */
+    @FXML private TableColumn<ScriptRow, String> colEnergyType;
+    /** Column that will display the sim's power frame. */
+    @FXML private TableColumn<ScriptRow, String> colPowerFrame;
+    /** Column that will display the sim's power type. */
+    @FXML private TableColumn<ScriptRow, String> colPowerType;
+    /** Column that will display the sim's average DPS. */
+    @FXML private TableColumn<ScriptRow, Double> colAvgDPS;
+    /** Column that will display the sim's cumulative damage. */
+    @FXML private TableColumn<ScriptRow, Integer> colTotalDamage;
+    /** Column that will display the sim's save date. */
+    @FXML private TableColumn<ScriptRow, String> colDate;
 
-    @FXML public TableView<ScriptRow> scriptsTable;
-    @FXML public TableColumn<ScriptRow, String> colSaveName;
-    @FXML public TableColumn<ScriptRow, String> colKineticFrame;
-    @FXML public TableColumn<ScriptRow, String> colKineticType;
-    @FXML public TableColumn<ScriptRow, String> colEnergyFrame;
-    @FXML public TableColumn<ScriptRow, String> colEnergyType;
-    @FXML public TableColumn<ScriptRow, String> colPowerFrame;
-    @FXML public TableColumn<ScriptRow, String> colPowerType;
-    @FXML public TableColumn<ScriptRow, Double> colAvgDPS;
-    @FXML public TableColumn<ScriptRow, Integer> colTotalDamage;
-    @FXML public TableColumn<ScriptRow, String> colDate;
-
+    /**
+     * Sets up the property value factories so that the table will update when it gets a new result set. Calls the
+     * search with no parameters to populate the table without any filter queries.
+     */
     public void initialize() {
+        colScriptID.setCellValueFactory(new PropertyValueFactory<>("scriptId"));
         colSaveName.setCellValueFactory(new PropertyValueFactory<>("saveName"));
         colKineticFrame.setCellValueFactory(new PropertyValueFactory<>("kineticWeaponFrame"));
         colKineticType.setCellValueFactory(new PropertyValueFactory<>("kineticWeaponType"));
@@ -51,6 +81,9 @@ public class ScriptsPageController {
         onSearch();
     }
 
+    /**
+     * Opens a DB connection and queries the DB. Sets the results set entries to be the column data in the table.
+     */
     public void onSearch() {
         try {
             ResultSet rs = queryScripts();
@@ -62,15 +95,16 @@ public class ScriptsPageController {
                 while (rs.next()) {
                     ScriptRow row = new ScriptRow();
 
+                    row.setScriptId(rs.getInt("sim_id"));
                     row.setSaveName(rs.getString("sim_name"));
                     row.setKineticWeaponFrame(rs.getString("kinetic_frame"));
                     row.setKineticWeaponType(rs.getString("kinetic_type"));
-                    row.setEnergyWeaponFrame(rs.getString("energy_frame"));
+                    row.setMyEnergyWeaponFrame(rs.getString("energy_frame"));
                     row.setEnergyWeaponType(rs.getString("energy_type"));
                     row.setPowerWeaponFrame(rs.getString("power_frame"));
                     row.setPowerWeaponType(rs.getString("power_type"));
                     row.setAvgDPS(rs.getDouble("average_dps"));
-                    row.setTotalDPS(rs.getInt("total_damage"));
+                    row.setMyTotalDPS(rs.getInt("total_damage"));
                     row.setSaveDate(rs.getString("save_date"));
 
                     scriptsTable.getItems().add(row);
@@ -81,9 +115,13 @@ public class ScriptsPageController {
         }
     }
 
+    /**
+     * Constructs a query and gets back the necessary data to contstruct the table.
+     */
     private ResultSet queryScripts() throws SQLException {
         StringBuilder baseSql = new StringBuilder("""
             SELECT
+                s.sim_id,
                 s.sim_name,
                 k.weapon_frame AS kinetic_frame,
                 k.weapon_type AS kinetic_type,
@@ -117,8 +155,8 @@ public class ScriptsPageController {
             queries.add("""
                 SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.kinetic = w.weapons_id
-                WHERE w.frame = ?
+                LEFT JOIN weapons w ON sm.kinetic = w.weapon_id
+                WHERE w.weapon_frame = ?
             """);
             params.add(kineticFrame.getText().trim());
         }
@@ -127,7 +165,7 @@ public class ScriptsPageController {
             queries.add("""
                 SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.kinetic = w.weapons_id
+                LEFT JOIN weapons w ON sm.kinetic = w.weapon_id
                 WHERE w.weapon_type = ?
             """);
             params.add(kineticType.getText().trim());
@@ -137,17 +175,17 @@ public class ScriptsPageController {
             queries.add("""
                 SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.energy = w.weapons_id
-                WHERE w.frame = ?
+                LEFT JOIN weapons w ON sm.energy = w.weapon_id
+                WHERE w.weapon_frame = ?
             """);
             params.add(energyFrame.getText().trim());
         }
 
         if (energyType.getText() != null && !energyType.getText().trim().isEmpty()) {
             queries.add("""
-                SELECT sm.id
+                SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.energy = w.weapons_id
+                LEFT JOIN weapons w ON sm.energy = w.weapon_id
                 WHERE w.weapon_type = ?
             """);
             params.add(energyType.getText().trim());
@@ -155,19 +193,19 @@ public class ScriptsPageController {
 
         if (powerFrame.getText() != null && !powerFrame.getText().trim().isEmpty()) {
             queries.add("""
-                SELECT sm.id
+                SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.energy = w.weapons_id
-                WHERE w.frame = ?
+                LEFT JOIN weapons w ON sm.power = w.weapon_id
+                WHERE w.weapon_frame = ?
             """);
             params.add(powerFrame.getText().trim());
         }
 
         if (powerType.getText() != null && !powerType.getText().trim().isEmpty()) {
             queries.add("""
-                SELECT sm.id
+                SELECT sm.script_id
                 FROM sims_meta sm
-                LEFT JOIN weapons w ON sm.energy = w.weapons_id
+                LEFT JOIN weapons w ON sm.power = w.weapon_id
                 WHERE w.weapon_type = ?
             """);
             params.add(powerType.getText().trim());
@@ -191,15 +229,6 @@ public class ScriptsPageController {
             params.add(Integer.parseInt(totalDamage.getText().trim()));
         }
 
-//        if(saveDate.getText() != null && !saveDate.getText().trim().isEmpty()) {
-//            queries.add("""
-//                SELECT s.id
-//                FROM sims s
-//                WHERE save_date = ?
-//            """);
-//            params.add(saveDate.getText().trim());
-//        }
-
         if (queries.isEmpty()) {
             return Database.getInstance().executeQuery(baseSql.toString());
         }
@@ -220,8 +249,8 @@ public class ScriptsPageController {
             }
         }
 
-        idSets.sort((a, b) -> Integer.compare(a.size(), b.size()));
-        Set<Integer> finalIds = new LinkedHashSet<>(idSets.get(0));
+        idSets.sort(Comparator.comparingInt(Set::size));
+        Set<Integer> finalIds = new LinkedHashSet<>(idSets.getFirst());
         for (int i = 1; i < idSets.size(); i++) {
             finalIds.retainAll(idSets.get(i));
             if (finalIds.isEmpty()) {
@@ -238,7 +267,7 @@ public class ScriptsPageController {
         }
         finalSql.append(")");
 
-        Object[] bind = finalIds.stream().map(Integer::valueOf).toArray();
-        return Database.getInstance().executeQuery(finalSql.toString(), bind);
+        Object[] paramlist = finalIds.toArray();
+        return Database.getInstance().executeQuery(finalSql.toString(), paramlist);
     }
 }
